--- a/Products/appsettings.json
+++ b/Products/appsettings.json
@@ -15,5 +15,10 @@
   "RabbitMQSettings": {
     "Host": "localhost"
   },
+  "JwtSettings": {
+    "Key": "Ahft5S5uph.6vmCJQrexST1$syjZBjXWRgJMFPU4",
+    "Issuer": "https://localhost:44373/",
+    "Audience": "https://localhost:44373/"
+  },
   "AllowedHosts": "*"
 }
