fix mongoDB port

--- a/Products/appsettings.json
+++ b/Products/appsettings.json
@@ -5,15 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MongoDbSettings": {
-    "Host": "localhost",
-    "Port": "27017"
-  },
   "ServiceSettings": {
     "ServiceName": "Products" // db name
   },
+  "MongoDbSettings": {
+    "Host": "mongo",
+    "Port": "27017"
+  },
   "RabbitMQSettings": {
-    "Host": "localhost"
+    "Host": "rabbitmq",
+    "Port": "5672"
   },
   "JwtSettings": {
     "Key": "Ahft5S5uph.6vmCJQrexST1$syjZBjXWRgJMFPU4",
