--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackageId>EyalShop.Common</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
