--- a/Orders/appsettings.json
+++ b/Orders/appsettings.json
@@ -9,11 +9,33 @@
     "ServiceName": "Orders" // db name
   },
   "MongoDbSettings": {
-    "Host": "localhost",
+    "Host": "mongo",
     "Port": "27017"
   },
   "RabbitMQSettings": {
-    "Host": "localhost"
+    "Host": "rabbitmq",
+    "Port": "5672"
+  },
+  "JwtSettings": {
+    "Key": "Ahft5S5uph.6vmCJQrexST1$syjZBjXWRgJMFPU4",
+    "Issuer": "https://localhost:44373/",
+    "Audience": "https://localhost:44373/"
   },
   "AllowedHosts": "*"
 }
+//"MongoDbSettings": {
+//  "Host": "localhost",
+//  "Port": "27017"
+//},
+//"RabbitMQSettings": {
+//  "Host": "localhost"
+//},
+//},
+//"MongoDbSettings": {
+//  "Host": "mongo",
+//  "Port": "27017"
+//},
+//"RabbitMQSettings": {
+//  "Host": "rabbitmq",
+//  "Port": "5672"
+//},
