--- a/Products/Dockerfile
+++ b/Products/Dockerfile
@@ -1,4 +1,4 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# Products
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
@@ -18,8 +18,13 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Products.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-COPY ../cert.pem /app/cert/
-RUN chmod 644 /app/cert/cert.pem && update-ca-certificates
+# Create Cert directory and copy cert.pem // this not working
+WORKDIR /app
+RUN mkdir -p ./cert
+COPY ["cert.pem", "./cert/"]
+WORKDIR /app/cert
+RUN chmod 644 ./cert.pem && update-ca-certificates
+WORKDIR /app
 
 FROM base AS final
 WORKDIR /app
