--- a/Orders/Dockerfile
+++ b/Orders/Dockerfile
@@ -1,7 +1,5 @@
 # Orders
 
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
@@ -12,7 +10,6 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Orders/Orders.csproj", "Orders/"]
 RUN dotnet restore "./Orders/./Orders.csproj"
-
 COPY . .
 WORKDIR "/src/Orders"
 RUN dotnet build "./Orders.csproj" -c $BUILD_CONFIGURATION -o /app/build
@@ -20,6 +17,14 @@ RUN dotnet build "./Orders.csproj" -c $BUILD_CONFIGURATION -o /app/build
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Orders.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+# Create Cert directory and copy cert.pem // this not working
+WORKDIR /app
+RUN mkdir -p ./cert
+COPY ["cert.pem", "./cert/"]
+WORKDIR /app/cert
+RUN chmod 644 ./cert.pem && update-ca-certificates
+WORKDIR /app
 
 FROM base AS final
 WORKDIR /app
