--- a/Members/Members/appsettings.json
+++ b/Members/Members/appsettings.json
@@ -10,11 +10,12 @@
     "ServiceName": "Users" // db name
   },
   "MongoDbSettings": {
-    "Host": "localhost",
+    "Host": "mongo",
     "Port": "27017"
   },
   "RabbitMQSettings": {
-    "Host": "localhost"
+    "Host": "rabbitmq",
+    "Port": "5672"
   },
   "JwtSettings": {
     "Key": "Ahft5S5uph.6vmCJQrexST1$syjZBjXWRgJMFPU4",
