Members from appsettings

--- a/Members/appsettings.Development.json
+++ b/Members/appsettings.Development.json
@@ -4,5 +4,27 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ServiceSettings": {
+    "ServiceName": "Users" // db name
+  },
+  "MembersApiSettings": {
+    "PasswordSalt": "$2a$11$nXwTGPT.uJb.p6H.Um0VP.",
+    "JwtToken": "My top secret key and it must be long key"
+    //"Certificates:Development:Password": "fc2f7da3-3dee-466b-8e03-58aa1bab1593"
+  },
+  "MongoDbSettings": {
+    "Host": "localhost",
+    "Port": "27017"
+  },
+  "RabbitMQSettings": {
+    "Host": "localhost",
+    "Port": "5672"
+  },
+  "JwtSettings": {
+    "Key": "Ahft5S5uph.6vmCJQrexST1$syjZBjXWRgJMFPU4",
+    "Issuer": "https://localhost:44373/",
+    "Audience": "https://localhost:44373/"
   }
 }
