--- a/Members/appsettings.json
+++ b/Members/appsettings.json
@@ -9,6 +9,11 @@
   "ServiceSettings": {
     "ServiceName": "Users" // db name
   },
+  "MembersApiSettings": {
+    "PasswordSalt": "$2a$11$nXwTGPT.uJb.p6H.Um0VP.",
+    "JwtToken": "My top secret key and it must be long key"
+    //"Certificates:Development:Password": "fc2f7da3-3dee-466b-8e03-58aa1bab1593"
+  },
   "MongoDbSettings": {
     "Host": "mongo",
     "Port": "27017"
